--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>VantixIPTV</title>
+  <title>VantixIPTV — Streaming Premium</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+  <meta name="description" content="VantixIPTV — Reproduce tus listas IPTV con la mejor experiencia. Diseño premium, streaming HD y gestión inteligente de canales.">
+  <meta name="theme-color" content="#8b5cf6">
+  <meta name="color-scheme" content="dark">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Google Fonts: Inter -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
